[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "QA GURU HoMeWoRk"
authors = ["ILYAZGO <mig_star@mail.ru>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
selene = "^2.0.0b14"

[tool.poetry.dev-dependencies]
pylint = "2.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
